fix warning package

--- a/manifest.json
+++ b/manifest.json
@@ -25,6 +25,7 @@
 	"CodePath": "plugin/main.html",
 	"Description": "Hassle-free time tracking using the Elgato Stream Deck and Toggl.",
 	"Name": "Toggl",
+	"Category": "Toggl",
 	"UUID": "one.blueshift.streamdeck.toggl",
 	"Icon": "resources/pluginIcon",
 	"PropertyInspectorPath": "pi/main_pi.html",
